--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <div class="content">
-          <h1>Ryan Sandison</h1>
+          <h1><img src="Images/Avatar.jpg" class="Avatar" alt="">Ryan Sandison</h1>
           <div class="links">
             <a href="Home">Home</a>
             <a href="About">About</a>
