--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <meta charset="utf-8">
@@ -10,7 +11,7 @@
     <header>
       <nav>
         <div class="content">
-          <h1><img src="Images/Avatar.jpg" class="Avatar" alt="">Ryan Sandison</h1>
+          <h1>Welcome!!!</h1>
           <div class="links">
             <a href="Home">Home</a>
             <a href="About">About</a>
