--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <div class="content">
-          <h1>Welcome!!!</h1>
+          <h1>Welcome!</h1>
           <div class="links">
             <a href="Home">Home</a>
             <a href="About">About</a>
