--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <div class="content">
-          <h1>Welcome!</h1>
+          <h1>Ryan Sandison</h1>
           <div class="links">
             <a href="Home">Home</a>
             <a href="About">About</a>
@@ -22,18 +22,18 @@
         <div class="dropdown">
           <a href="Home">Home</a>
           <a href="About">About</a>
-          <a href="Store">this is a test</a>
+          <a href="Store">Store</a>
         </div>
       </nav>
     </header>
     <main>
-      this is the main
+      <div>
+        <p>Test</p>
+      </div>
     </main>
     <aside>
-      this is the sidebar
     </aside>
     <footer>
-      this is the footer
     </footer>
     <script src="js/scripts.js" charset="utf-8"></script>
   </body>
