--- a/pages/Store.html
+++ b/pages/Store.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <meta charset="utf-8">
     <title>Ryan Sandison</title>
   </head>
@@ -12,18 +12,18 @@
     <header>
       <nav>
         <div class="content">
-          <h1>Ryan Sandison Photography</h1>
+          <h1>Store</h1>
           <div class="links">
-            <a href="">Home</a>
-            <a href="pages\Photos.html">Photos</a>
-            <a href="pages\Store.html">Store</a>
+            <a href="../index.html">Home</a>
+            <a href="Photos.html">Photos</a>
+            <a href="">Store</a>
           </div>
           <i class="material-icons menu" onclick="menu()">menu</i>
         </div>
         <div class="dropdown">
-          <a href="">Home</a>
-          <a href="pages\Photos.html">Photos</a>
-          <a href="pages\Store.html">Store</a>
+          <a href="../index.html">Home</a>
+          <a href="Photos.html">Photos</a>
+          <a href="">Store</a>
         </div>
       </nav>
     </header>
@@ -31,6 +31,6 @@
     </main>
     <footer>
     </footer>
-    <script src="js/scripts.js" charset="utf-8"></script>
+    <script src="../js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
