Added Cover Photo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+<body>
     <link rel="stylesheet" href="css/main.css">
     <meta charset="utf-8">
     <title>Ryan Sandison</title>
@@ -20,14 +23,17 @@
           </div>
           <i class="material-icons menu" onclick="menu()">menu</i>
         </div>
-        <div class="dropdown">
+        <div class="dropdown w3-animate-top">
           <a href="">Home</a>
           <a href="pages\Photos.html">Photos</a>
           <a href="pages\Store.html">Store</a>
         </div>
       </nav>
     </header>
-    <main>
+    <main class="Cover-Photo w3-animate-opacity">
+      <div>
+        <h1 class="title w3-animate-bottom">Ryan Sandison Photography</h1>
+      </div>
     </main>
     <footer>
     </footer>
