--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -27,19 +27,7 @@
         </div>
       </nav>
     </header>
-    <main class="mainPhotos">
-      <div id="one" class="box">one</div>
-      <div class="box">two</div>
-      <div class="box">three</div>
-      <div class="box">four</div>
-      <div class="box">five</div>
-      <div class="box">six</div>
-      <div class="box">seven</div>
-      <div class="box">eight</div>
-      <div class="box">nine</div>
-      <div class="box">ten</div>
-      <div class="box">eleven</div>
-      <div class="box">twelve</div>
+    <main>
     </main>
     <footer>
     </footer>
