--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <link rel="stylesheet" href="css/main.css">
     <meta charset="utf-8">
-    <title>Ryan Sandison</title>
+    <title>Ryan Sandison Photography</title>
   </head>
   <body>
     <header>
@@ -35,8 +35,6 @@
         <h1 class="title w3-animate-bottom">Ryan Sandison Photography</h1>
       </div>
     </main>
-    <footer>
-    </footer>
     <script src="js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
