--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="utf-8">
     <title>Ryan Sandison</title>
@@ -29,8 +31,6 @@
     </header>
     <main>
     </main>
-    <footer>
-    </footer>
     <script src="../js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
