added Favicon + Some changes to styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+    <link rel="icon" href="Images/favicon.ico" type="image/gif" sizes="16x16">
 <body>
     <link rel="stylesheet" href="css/main.css">
     <meta charset="utf-8">
