--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
     <meta charset="utf-8">
-    <title>Ryan Sandison</title>
+    <title>Photos</title>
   </head>
   <body>
     <header>
