Fixed Dropdown Animation + resixed cover photo to better fit page.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" href="Images/favicon.ico" type="image/gif" sizes="16x16">
-<body>
     <link rel="stylesheet" href="css/main.css">
+<body>
     <meta charset="utf-8">
     <title>Ryan Sandison Photography</title>
   </head>
@@ -21,6 +22,8 @@
             <a href="">Home</a>
             <a href="pages\Photos.html">Photos</a>
             <a href="pages\Store.html">Store</a>
+            <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
           <i class="material-icons menu" onclick="menu()">menu</i>
         </div>
@@ -28,6 +31,10 @@
           <a href="">Home</a>
           <a href="pages\Photos.html">Photos</a>
           <a href="pages\Store.html">Store</a>
+          <div class="Socials">
+            <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
+          </div>
         </div>
       </nav>
     </header>
