--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -2,11 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="../Images/favicon.ico" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/image_gallery.css">
+<body>
     <meta charset="utf-8">
     <title>Photos</title>
   </head>
@@ -17,20 +21,53 @@
           <h1>Photos</h1>
           <div class="links">
             <a href="../index.html">Home</a>
-            <a href="">Photos</a>
+            <a href="#">Photos</a>
             <a href="Store.html">Store</a>
+            <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
           <i class="material-icons menu" onclick="menu()">menu</i>
         </div>
-        <div class="dropdown">
+        <div class="dropdown w3-animate-top">
           <a href="../index.html">Home</a>
-          <a href="">Photos</a>
-          <a href="Store.html">Store</a>
+          <a href="#">Photos</a>
+          <a href="../pages\Store.html">Store</a>
+          <div class="Socials">
+            <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
+          </div>
         </div>
       </nav>
     </header>
     <main>
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 3</div>
+          <img src="../Photos/IMG_6557.jpg" style="width:100%">
+          <div class="text">Falcon - Lincoln Castle</div>
+        </div>
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 3</div>
+          <img src="../Photos/IMG_6643.jpg" style="width:100%">
+          <div class="text">Long Eared Owl - Lincoln Castle</div>
+        </div>
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 3</div>
+          <img src="../Photos/RoloRunning.jpg" style="width:100%">
+          <div class="text">Rolo - My Doggy</div>
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
     </main>
     <script src="../js/scripts.js" charset="utf-8"></script>
+    <script src="../js/image_gallery.js" charset="utf-8"></script>
+
   </body>
 </html>
