--- a/pages/Store.html
+++ b/pages/Store.html
@@ -2,35 +2,47 @@
 <html lang="en" dir="ltr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="../Images/favicon.ico" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+<body>
     <meta charset="utf-8">
-    <title>Ryan Sandison</title>
+    <title>Ryan Sandison Photography</title>
   </head>
   <body>
     <header>
       <nav>
         <div class="content">
-          <h1>Store</h1>
+          <h1>Ryan Sandison Photography</h1>
           <div class="links">
             <a href="../index.html">Home</a>
             <a href="Photos.html">Photos</a>
-            <a href="">Store</a>
+            <a href="#">Store</a>
+            <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
           <i class="material-icons menu" onclick="menu()">menu</i>
         </div>
-        <div class="dropdown">
+        <div class="dropdown w3-animate-top">
           <a href="../index.html">Home</a>
-          <a href="Photos.html">Photos</a>
-          <a href="">Store</a>
+          <a href="#">Photos</a>
+          <a href="../pages\Store.html">Store</a>
+          <div class="Socials">
+            <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
+          </div>
         </div>
       </nav>
     </header>
-    <main>
+    <main class="Cover-Photo w3-animate-opacity">
+      <div>
+        <h1 class="title w3-animate-bottom">Ryan Sandison Photography</h1>
+      </div>
     </main>
-    <footer>
-    </footer>
     <script src="../js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
