Added new Homepage

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
         </div>
       </nav>
     </header>
-    <main class="Cover-Photo w3-animate-opacity">
-      <div>
-        <h1 class="title w3-animate-bottom">Ryan Sandison Photography</h1>
-      </div>
+    <main class="w3-animate-opacity">
+      <div class="bg-image img1"></div>
+      <div class="bg-image img2"></div>
+      <div class="bg-image img3"></div>
+      <div class="bg-text">Ryan Sandison Photography</div>
     </main>
     <script src="js/scripts.js" charset="utf-8"></script>
   </body>
