--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -4,12 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../Images/favicon.ico" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="../css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/image_gallery.css">
+    <link rel="stylesheet" href="../css/main.css">
 <body>
     <meta charset="utf-8">
     <title>Photos</title>
@@ -40,34 +39,43 @@
       </nav>
     </header>
     <main>
-      <div class="slideshow-container">
-        <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
-          <img src="../Photos/IMG_6557.jpg" style="width:100%">
-          <div class="text">Falcon - Lincoln Castle</div>
+      <div class="Portfolio">
+        <h1>My Photos</h1>
+          <hr>
+        <h2>Portfolio</h2>
+        <div class="row">
+          <div class="column">
+            <div class="contents">
+              <img src="../Photos/IMG_6557.jpg" alt="Rolo - My dog" class="image-1">
+              <h3>Nature</h3>
+              <p>Click above to view my various wildlife and nature photos, many of these were taken not far from where i live, im lucky enough to have lots of interesting birds close by!</p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="contents">
+              <img src="../Photos/IMG_5494.jpg" alt="Portrates" class="image-1">
+              <h3>Portrates</h3>
+              <p>Click above to view all my portrates</p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="contents">
+              <img src="../Photos/IMG_3633.jpg" alt="" class="image-1">
+              <h3>Architecture</h3>
+              <p>Click above to view all my Architecture Photos</p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="contents">
+              <img src="../Photos/IMG_0240.jpg" alt="" class="image-1">
+              <h3>Transport</h3>
+              <p>Click above to see all my Transport Photos</p>
+            </div>
+          </div>
+          </div>
         </div>
-        <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
-          <img src="../Photos/IMG_6643.jpg" style="width:100%">
-          <div class="text">Long Eared Owl - Lincoln Castle</div>
-        </div>
-        <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
-          <img src="../Photos/RoloRunning.jpg" style="width:100%">
-          <div class="text">Rolo - My Doggy</div>
-        </div>
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-      </div>
-      <br>
-      <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
       </div>
     </main>
     <script src="../js/scripts.js" charset="utf-8"></script>
-    <script src="../js/image_gallery.js" charset="utf-8"></script>
-
   </body>
 </html>
