--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -54,8 +54,8 @@
           <div class="column">
             <div class="contents">
               <img src="../Photos/IMG_5494.jpg" alt="Portrates" class="image-1">
-              <h3>Portrates</h3>
-              <p>Click above to view all my portrates</p>
+              <h3>Portraits</h3>
+              <p>Click above to view all my portraits</p>
             </div>
           </div>
           <div class="column">
