--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
 <body>
     <meta charset="utf-8">
-    <title>Ryan Sandison Photography</title>
+    <title>Contact Me</title>
   </head>
   <body>
     <header>
@@ -21,7 +21,7 @@
           <div class="links">
             <a href="../index.html">Home</a>
             <a href="Photos.html">Photos</a>
-            <a href="#">Store</a>
+            <a href="#">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
@@ -29,8 +29,8 @@
         </div>
         <div class="dropdown w3-animate-top">
           <a href="../index.html">Home</a>
-          <a href="#">Photos</a>
-          <a href="../pages\Store.html">Store</a>
+          <a href="../Photos.html">Photos</a>
+          <a href="#">Contact</a>
           <div class="Socials">
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
@@ -39,8 +39,21 @@
       </nav>
     </header>
     <main class="Cover-Photo w3-animate-opacity">
-      <div>
-        <h1 class="title w3-animate-bottom">Ryan Sandison Photography</h1>
+      <div class="form-container">
+        <h1 class="form-title">Contact Me</h1>
+        <div class="line"></div>
+        <form>
+          <div class="inputs">
+            <input type="text" name="name" value="" placeholder="Name">
+            <input type="text" name="Email" value="" placeholder="Email">
+          </div>
+          <div class="message">
+            <textarea class="message-area" name="Message" placeholder="Need a photoshoot? message me with some details and i will get back to you."></textarea>
+          </div>
+          <div class="submit-button">
+            <input type="submit" name="button" value="Send Message">
+          </div>
+        </form>
       </div>
     </main>
     <script src="../js/scripts.js" charset="utf-8"></script>
