--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -21,7 +21,7 @@
           <div class="links">
             <a href="../index.html">Home</a>
             <a href="#">Photos</a>
-            <a href="Store.html">Store</a>
+            <a href="Contact.html">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
@@ -30,7 +30,7 @@
         <div class="dropdown w3-animate-top">
           <a href="../index.html">Home</a>
           <a href="#">Photos</a>
-          <a href="../pages\Store.html">Store</a>
+          <a href="../pages\Contact.html">Contact</a>
           <div class="Socials">
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
@@ -40,9 +40,8 @@
     </header>
     <main>
       <div class="Portfolio">
-        <h1>My Photos</h1>
-          <hr>
-        <h2>Portfolio</h2>
+        <h1>My Portfolio</h1>
+          <div class="line"></div>
         <div class="row">
           <div class="column">
             <div class="contents">
