Fixed hyperlink error

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -29,7 +29,7 @@
         </div>
         <div class="dropdown w3-animate-top">
           <a href="../index.html">Home</a>
-          <a href="../Photos.html">Photos</a>
+          <a href="Photos.html">Photos</a>
           <a href="#">Contact</a>
           <div class="Socials">
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
