added animation to Photos page

--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -39,7 +39,7 @@
       </nav>
     </header>
     <main>
-      <div class="Portfolio">
+      <div class="Portfolio w3-animate-opacity">
         <h1>My Portfolio</h1>
           <div class="line"></div>
         <div class="row">
