--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="links">
             <a href="">Home</a>
             <a href="pages\Photos.html">Photos</a>
-            <a href="pages\Contact.html">Contact</a>
+            <a href="pages\Contact.php">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
@@ -30,7 +30,7 @@
         <div class="dropdown w3-animate-top">
           <a href="">Home</a>
           <a href="pages\Photos.html">Photos</a>
-          <a href="pages\Contact.html">Contact</a>
+          <a href="pages\Contact.php">Contact</a>
           <div class="Socials">
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
