Added sub page for Photos

--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -59,7 +59,7 @@
           </div>
           <div class="column">
             <div class="contents">
-              <img src="../Photos/IMG_6557.jpg" alt="Rolo - My dog" class="image-1">
+              <a href="Nature.html"><img src="../Photos/IMG_6557.jpg" alt="Rolo - My dog" class="image-1"></a>
               <h3>Nature</h3>
               <p>Click above to view my various wildlife and nature photos, many of these were taken not far from where i live, im lucky enough to have lots of interesting birds close by!</p>
             </div>
