Added Photo grid to Nature page + dropdown for each sub page of photos

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -20,7 +20,15 @@
           <h1>Contact Me</h1>
           <div class="links">
             <a href="../index.html">Home</a>
-            <a href="Photos.html">Photos</a>
+            <div class="nav-dropdown">
+              <a href="pages\Photos.html">Photos</a>
+                <div class="dropdown-cnt">
+                  <a href="#">Architecture</a>
+                  <a href="#">Portraits</a>
+                  <a href="pages/Nature.html">Nature</a>
+                  <a href="#">Transport</a>
+                </div>
+            </div>
             <a href="#">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
