--- a/pages/Nature.html
+++ b/pages/Nature.html
@@ -11,17 +11,25 @@
     <link rel="stylesheet" href="../css/main.css">
 <body>
     <meta charset="utf-8">
-    <title>Photos</title>
+    <title>Photos - Nature</title>
   </head>
   <body>
     <header>
       <nav>
         <div class="content">
-          <h1>Photos</h1>
+          <h1>Photos - Nature</h1>
           <div class="links">
             <a href="../index.html">Home</a>
-            <a href="Photos.html">Photos</a>
-            <a href="Contact.php">Contact</a>
+            <div class="nav-dropdown">
+              <a href="../pages/Photos.html">Photos</a>
+                <div class="dropdown-cnt">
+                  <a href="#">Architecture</a>
+                  <a href="#">Portraits</a>
+                  <a href="#">Nature</a>
+                  <a href="#">Transport</a>
+                </div>
+            </div>
+            <a href="Contact.html">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
@@ -30,7 +38,7 @@
         <div class="dropdown w3-animate-top">
           <a href="../index.html">Home</a>
           <a href="Photos.html">Photos</a>
-          <a href="Contact.php">Contact</a>
+          <a href="Contact.html">Contact</a>
           <div class="Socials">
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
@@ -44,16 +52,26 @@
           <div class="line"></div>
         <div class="row">
           <div class="column">
-            <div class="contents">
-              <img src="../Photos/Nature/IMG_6557.jpg" alt="Rolo - My dog" class="image-1">
-              <h3>Nature</h3>
-              <p>Click above to view my various wildlife and nature photos, many of these were taken not far from where i live, im lucky enough to have lots of interesting birds close by!</p>
+            <div class="photo-row">
+              <div class="photo-column">
+                <a target="_blank" href="../Photos/Nature/IMG_6557.jpg"><img src="../Photos/Nature/IMG_6557.jpg" alt=""></a>
+                <a target="_blank" href="../Photos/Nature/RoloRunning.jpg"><img src ="../Photos/Nature/RoloRunning.jpg"></a>
+              </div>
+              <div class="photo-column">
+                <a target="_blank" href="../Photos/Nature/IMG_6643.jpg"><img src="../Photos/Nature/IMG_6643.jpg" alt=""></a>
+                <a target="_blank" href="../Photos/Nature/IMG_6667.jpg"><img src="../Photos/Nature/IMG_6667.jpg" alt=""></a>
+              </div>
+              <div class="photo-column">
+                <a target="_blank" href="../Photos/Nature/IMG_6798.jpg"><img src="../Photos/Nature/IMG_6798.jpg" alt=""></a>
+                <a target="_blank" href="../Photos/Nature/IMG_6802.jpg"><img src="../Photos/Nature/IMG_6802.jpg" alt=""></a>
+              </div>
+              <div class="photo-column">
+                <a target="_blank" href="../Photos/Nature/IMG_6825.jpg"><img src="../Photos/Nature/IMG_6825.jpg" alt=""></a>
+              </div>
             </div>
           </div>
-          </div>
         </div>
-      </div>
-    </main>
+      </main>
     <script src="../js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
