--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
           <h1>Ryan Sandison Photography</h1>
           <div class="links">
             <a href="">Home</a>
-            <a href="pages\Photos.html">Photos</a>
-            <a href="pages\Contact.php">Contact</a>
+            <div class="nav-dropdown">
+              <a href="pages\Photos.html">Photos</a>
+                <div class="dropdown-cnt">
+                  <a href="#">Architecture</a>
+                  <a href="#">Portraits</a>
+                  <a href="pages/Nature.html">Nature</a>
+                  <a href="#">Transport</a>
+                </div>
+            </div>
+            <a href="pages\Contact.html">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
@@ -30,7 +38,7 @@
         <div class="dropdown w3-animate-top">
           <a href="">Home</a>
           <a href="pages\Photos.html">Photos</a>
-          <a href="pages\Contact.php">Contact</a>
+          <a href="pages\Contact.html">Contact</a>
           <div class="Socials">
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
@@ -42,7 +50,10 @@
       <div class="bg-image img1"></div>
       <div class="bg-image img2"></div>
       <div class="bg-image img3"></div>
-      <div class="bg-text">Ryan Sandison Photography</div>
+      <div class="bg-text">
+        Ryan Sandison Photography
+        <h6>Welcome!<h6>
+      </div>
     </main>
     <script src="js/scripts.js" charset="utf-8"></script>
   </body>
