--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -20,8 +20,16 @@
           <h1>Photos</h1>
           <div class="links">
             <a href="../index.html">Home</a>
-            <a href="#">Photos</a>
-            <a href="Contact.php">Contact</a>
+            <div class="nav-dropdown">
+              <a href="#">Photos</a>
+                <div class="dropdown-cnt">
+                  <a href="#">Architecture</a>
+                  <a href="#">Portraits</a>
+                  <a href="Nature.html">Nature</a>
+                  <a href="#">Transport</a>
+                </div>
+            </div>
+            <a href="Contact.html">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
@@ -30,7 +38,7 @@
         <div class="dropdown w3-animate-top">
           <a href="../index.html">Home</a>
           <a href="#">Photos</a>
-          <a href="../pages\Contact.php">Contact</a>
+          <a href="../pages\Contact.html">Contact</a>
           <div class="Socials">
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
@@ -59,7 +67,7 @@
           </div>
           <div class="column">
             <div class="contents">
-              <a href="Nature.html"><img src="../Photos/IMG_6557.jpg" alt="Rolo - My dog" class="image-1"></a>
+              <a href="Nature.html"><img src="../Photos/Nature/IMG_6557.jpg" alt="Rolo - My dog" class="image-1"></a>
               <h3>Nature</h3>
               <p>Click above to view my various wildlife and nature photos, many of these were taken not far from where i live, im lucky enough to have lots of interesting birds close by!</p>
             </div>
