added one new photo to nature

--- a/pages/Nature.html
+++ b/pages/Nature.html
@@ -67,6 +67,7 @@
               </div>
               <div class="photo-column">
                 <a target="_blank" href="../Photos/Nature/IMG_6825.jpg"><img src="../Photos/Nature/IMG_6825.jpg" alt=""></a>
+                <a target="_blank" href="../Photos/Nature/IMG_6772.jpg"><img src="../Photos/Nature/IMG_6772.jpg" alt=""></a>
               </div>
             </div>
           </div>
