--- a/pages/Nature.html
+++ b/pages/Nature.html
@@ -29,7 +29,7 @@
                   <a href="#">Transport</a>
                 </div>
             </div>
-            <a href="Contact.html">Contact</a>
+            <a href="Contact.php">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
@@ -38,7 +38,7 @@
         <div class="dropdown w3-animate-top">
           <a href="../index.html">Home</a>
           <a href="Photos.html">Photos</a>
-          <a href="Contact.html">Contact</a>
+          <a href="Contact.php">Contact</a>
           <div class="Socials">
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
             <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
