Final Pages added

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="nav-dropdown">
               <a href="pages\Photos.html">Photos</a>
                 <div class="dropdown-cnt">
-                  <a href="#">Architecture</a>
-                  <a href="#">Portraits</a>
+                  <a href="pages/Architecture.html">Architecture</a>
+                  <a href="pages/Portraits.html">Portraits</a>
                   <a href="pages/Nature.html">Nature</a>
-                  <a href="#">Transport</a>
+                  <a href="pages/Transport.html">Transport</a>
                 </div>
             </div>
             <a href="pages\Contact.php">Contact</a>
