--- a/pages/Nature.html
+++ b/pages/Nature.html
@@ -23,10 +23,10 @@
             <div class="nav-dropdown">
               <a href="../pages/Photos.html">Photos</a>
                 <div class="dropdown-cnt">
-                  <a href="#">Architecture</a>
-                  <a href="#">Portraits</a>
+                  <a href="Architecture.html">Architecture</a>
+                  <a href="Portraits.html">Portraits</a>
                   <a href="#">Nature</a>
-                  <a href="#">Transport</a>
+                  <a href="Transport.html">Transport</a>
                 </div>
             </div>
             <a href="Contact.php">Contact</a>
@@ -56,14 +56,17 @@
               <div class="photo-column">
                 <a target="_blank" href="../Photos/Nature/IMG_6557.jpg"><img src="../Photos/Nature/IMG_6557.jpg" alt=""></a>
                 <a target="_blank" href="../Photos/Nature/RoloRunning.jpg"><img src ="../Photos/Nature/RoloRunning.jpg"></a>
+                <a target="_blank" href="../Photos/Nature/IMG_1432.jpg"><img src ="../Photos/Nature/IMG_1432.jpg"></a>
               </div>
               <div class="photo-column">
                 <a target="_blank" href="../Photos/Nature/IMG_6643.jpg"><img src="../Photos/Nature/IMG_6643.jpg" alt=""></a>
                 <a target="_blank" href="../Photos/Nature/IMG_6667.jpg"><img src="../Photos/Nature/IMG_6667.jpg" alt=""></a>
+                <a target="_blank" href="../Photos/Nature/IMG_2732.jpg"><img src ="../Photos/Nature/IMG_2732.jpg"></a>
               </div>
               <div class="photo-column">
                 <a target="_blank" href="../Photos/Nature/IMG_6798.jpg"><img src="../Photos/Nature/IMG_6798.jpg" alt=""></a>
                 <a target="_blank" href="../Photos/Nature/IMG_6802.jpg"><img src="../Photos/Nature/IMG_6802.jpg" alt=""></a>
+                <a target="_blank" href="../Photos/Nature/IMG_3470.jpg"><img src ="../Photos/Nature/IMG_3470.jpg"></a>
               </div>
               <div class="photo-column">
                 <a target="_blank" href="../Photos/Nature/IMG_6825.jpg"><img src="../Photos/Nature/IMG_6825.jpg" alt=""></a>
