--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -23,10 +23,10 @@
             <div class="nav-dropdown">
               <a href="#">Photos</a>
                 <div class="dropdown-cnt">
-                  <a href="#">Architecture</a>
-                  <a href="#">Portraits</a>
+                  <a href="Architecture.html">Architecture</a>
+                  <a href="Portraits.html">Portraits</a>
                   <a href="Nature.html">Nature</a>
-                  <a href="#">Transport</a>
+                  <a href="Transport.html">Transport</a>
                 </div>
             </div>
             <a href="Contact.php">Contact</a>
@@ -53,14 +53,14 @@
         <div class="row">
           <div class="column">
             <div class="contents">
-              <img src="../Photos/IMG_3633.jpg" alt="" class="image-1">
+              <a href="Architecture.html"><img src="../Photos/Architecture/IMG_3633.jpg" alt="" class="image-1"></a>
               <h3>Architecture</h3>
               <p>Click above to view all my Architecture Photos</p>
             </div>
           </div>
           <div class="column">
             <div class="contents">
-              <img src="../Photos/IMG_5494.jpg" alt="Portrates" class="image-1">
+              <a href="Portraits.html"><img src="../Photos/Portraits/IMG_5494.jpg" alt="Portrates" class="image-1"></a>
               <h3>Portraits</h3>
               <p>Click above to view all my portraits</p>
             </div>
@@ -74,7 +74,7 @@
           </div>
           <div class="column">
             <div class="contents">
-              <img src="../Photos/IMG_0240.jpg" alt="" class="image-1">
+              <a href="Transport.html"><img src="../Photos/Transport/IMG_0240.jpg" alt="" class="image-1"></a>
               <h3>Transport</h3>
               <p>Click above to see all my Transport Photos</p>
             </div>
