adjusted padding on twitter icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <a href="pages\Contact.php">Contact</a>
             <a class="instagram" href="https://www.instagram.com/ryan_sandison/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
+            <a class="nav-socials" href="https://twitter.com/Ryan_Sandison"><i class="fa fa-twitter"></i></a>
           </div>
           <i class="material-icons menu" onclick="menu()">menu</i>
         </div>
